# prefect-mcp-server-demo

./: .gitignore  CLAUDE.md  README.md  justfile  prefect.toml  prefect.yaml  pyproject.toml  test_agent.py
src/prefect_mcp_server_demo/: _utils.py  agent.py  cleanup.py  get_stars.py
